# salut-rs

./: .gitignore  Cargo.toml  README.md  patch.patch
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: d03h4c93n7lsj9j531am7yam2jvxixfc-source  z430pkik37s0vrg95p1r1cwrpfb0is0a-source
conf/: 1.toml  2.toml  3.toml  4.toml  5.toml  README.md
src/: config.rs  display.rs  display.rs.orig  display.rs.rej  main.rs
